k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alergiscan
  namespace: alergiscan
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - alergiscan.mris.dev
      secretName: alergiscan-tls
  rules:
    - host: alergiscan.mris.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alergiscan
                port:
                  number: 80
